12/1 start